@@ -100,6 +100,8 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? 2016
 
 	Bug fixes
 
+	- Fl_Browser now correctly adjusts its scrollbars when the default
+	  text size is changed with textsize(int) (STR #3057).
 	- Fixed Fl_Text_Display/Fl_Text_Editor slow scrolling, line number
 	  display, wrap mode "hiding" text behind scrollbars, and more
 	  scrollbar handling (alignment) (STR #3272).
